captureorder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: captureorder
spec:
 replicas: 2
 selector:
  matchLabels:
   app: captureorder
 template:
  metadata:
   labels:
    app: captureorder
  spec:
   containers:
   - name: captureorder
     image: azch/captureorder
     imagePullPolicy: Always
     readinessProbe:
      httpGet:
       port: 8080
       path: /healthz
     livenessProbe:
      httpGet:
       port: 8080
       path: /healthz
     resources:
      requests:
       memory: "128Mi"
       cpu: "100m"
      limits:
       memory: "256Mi"
       cpu: "500m"
     ports:
      - containerPort: 8080
