frontend-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts: 
    - frontend.52.152.99.236.nip.io
    secretName: frontend-tls-secret 
  rules:
  - host: frontend.52.152.99.236.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
